--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -2,7 +2,7 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
-  root /var/www/html;
+  root /usr/share/nginx/html;
 
   # Add index.php to the list if you are using PHP
   index index.html index.htm index.nginx-debian.html;
